Assembly Reflection and Nlog

--- a/BookingApp3/appsettings.json
+++ b/BookingApp3/appsettings.json
@@ -1,17 +1,15 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
+    "LogLevel": {
+      "Default": "Trace",
+      "Microsoft": "Information"
+    }
+  },
     "Console": {
       "LogLevel": {
         "Default": "Warning"
       }
-    }
-  },
+    },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;user=root;password=root;database=a"
   }
